[FIX] Set Interfaces and Classes into classe folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,15 +122,17 @@ set_property(TARGET raytracer-interface PROPERTY CXX_STANDARD_REQUIRED ON)
 add_executable(
     raytracer
     Core/src/main.cpp
-    Core/src/APrimitive.cpp
-    Core/src/Vector3D.cpp
-    Core/src/Point3D.cpp
+    Core/src/classes/APrimitive.cpp
+    Core/src/classes/Vector3D.cpp
+    Core/src/classes/Point3D.cpp
     )
 
 # rules for raytracer project
 target_link_libraries(
     raytracer
     raytracer-interface
+    sfml-graphics
+    sfml-window
     )
 target_link_options(raytracer PRIVATE -rdynamic)
 target_compile_options(raytracer PRIVATE ${WARNING_FLAGS})
