--- a/Primitives/Plane/CMakeLists.txt
+++ b/Primitives/Plane/CMakeLists.txt
@@ -10,8 +10,8 @@ add_library(
 
 set(EXECUTABLE_OUTPUT_PATH ../${PROJECT_SOURCE_DIR}/plugins/)
 
-target_include_directories(plane_plugin PRIVATE ./include)
-target_compile_options(plane_plugin PRIVATE ${WARNING_FLAGS})
-target_link_libraries(plane_plugin PRIVATE raytracer-interface)
-set_property(TARGET plane_plugin PROPERTY CXX_STANDARD 20)
-set_property(TARGET plane_plugin PROPERTY CXX_STANDARD_REQUIRED ON)
+target_include_directories(raytracer_plane PRIVATE ./include)
+target_compile_options(raytracer_plane PRIVATE ${WARNING_FLAGS})
+target_link_libraries(raytracer_plane PRIVATE raytracer-interface)
+set_property(TARGET raytracer_plane PROPERTY CXX_STANDARD 20)
+set_property(TARGET raytracer_plane PROPERTY CXX_STANDARD_REQUIRED ON)
