--- a/Primitives/Sphere/CMakeLists.txt
+++ b/Primitives/Sphere/CMakeLists.txt
@@ -10,8 +10,8 @@ add_library(
 
 set(EXECUTABLE_OUTPUT_PATH ../${PROJECT_SOURCE_DIR}/plugins/)
 
-target_include_directories(sphere_plugin PRIVATE ./include)
-target_compile_options(sphere_plugin PRIVATE ${WARNING_FLAGS})
-target_link_libraries(sphere_plugin PRIVATE raytracer-interface)
-set_property(TARGET sphere_plugin PROPERTY CXX_STANDARD 20)
-set_property(TARGET sphere_plugin PROPERTY CXX_STANDARD_REQUIRED ON)
+target_include_directories(raytracer_sphere PRIVATE ./include)
+target_compile_options(raytracer_sphere PRIVATE ${WARNING_FLAGS})
+target_link_libraries(raytracer_sphere PRIVATE raytracer-interface)
+set_property(TARGET raytracer_sphere PROPERTY CXX_STANDARD 20)
+set_property(TARGET raytracer_sphere PROPERTY CXX_STANDARD_REQUIRED ON)
