[FIX] compilation not working when fmt is not installed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,6 +201,7 @@ target_link_libraries(
     raytracer-core PRIVATE
     sfml-graphics
     sfml-window
+    fmt
     PRIVATE nlohmann_json::nlohmann_json  # library for nlohmann_json => parse configuration files
     )
 
