--- a/.github/workflows/raytracer_workflow.yml
+++ b/.github/workflows/raytracer_workflow.yml
@@ -36,6 +36,14 @@ jobs:
     container:
       image: epitechcontent/epitest-docker:latest
     steps:
+    - name : Install packages
+      run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y ninja-build clang-tidy-12 ccache
+          sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-12 100
+          sudo apt-get install -y --no-install-recommends nlohmann-json3-dev
+          clang++ --version
+          clang-tidy --version
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
