[FIX] Fix sphere by adding checks if points which was hit is behind the camera or not

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,12 @@ FetchContent_MakeAvailable(json)
 
 message("${BoldRed}Finished loading library${ColourReset}")
 
+set(JSON_BuildTests OFF CACHE INTERNAL "") # don't test the library
+
+include(FetchContent)
+
+message("${BoldRed}Finished loading library${ColourReset}")
+
 # link shared libraries and compile them
 set_property(TARGET raytracer-interface PROPERTY CXX_STANDARD 20)
 set_property(TARGET raytracer-interface PROPERTY CXX_STANDARD_REQUIRED ON)
@@ -202,7 +208,6 @@ target_link_libraries(
     raytracer PRIVATE
     raytracer-interface
     raytracer-core
-    PRIVATE nlohmann_json::nlohmann_json  # library for nlohmann_json => parse configuration files
     )
 target_link_options(raytracer PRIVATE -rdynamic)
 target_compile_options(raytracer PRIVATE ${WARNING_FLAGS})
