--- a/Primitives/Cylinder/CMakeLists.txt
+++ b/Primitives/Cylinder/CMakeLists.txt
@@ -1,17 +1,17 @@
 ##
-## CMakeLists: Plugins/Primitives/Sphere
+## CMakeLists: Plugins/Primitives/Cylinder
 ##
 
 add_library(
-  raytracer_sphere SHARED
-  src/Sphere.cpp
+  raytracer_cylinder SHARED
+  src/Cylinder.cpp
   src/EntryPoint.cpp
 )
 
 set(EXECUTABLE_OUTPUT_PATH ../${PROJECT_SOURCE_DIR}/plugins/)
 
-target_include_directories(raytracer_sphere PRIVATE ./include)
-target_compile_options(raytracer_sphere PRIVATE ${WARNING_FLAGS})
-target_link_libraries(raytracer_sphere PRIVATE raytracer-interface)
-set_property(TARGET raytracer_sphere PROPERTY CXX_STANDARD 20)
-set_property(TARGET raytracer_sphere PROPERTY CXX_STANDARD_REQUIRED ON)
+target_include_directories(raytracer_cylinder PRIVATE ./include)
+target_compile_options(raytracer_cylinder PRIVATE ${WARNING_FLAGS})
+target_link_libraries(raytracer_cylinder PRIVATE raytracer-interface)
+set_property(TARGET raytracer_cylinder PROPERTY CXX_STANDARD 20)
+set_property(TARGET raytracer_cylinder PROPERTY CXX_STANDARD_REQUIRED ON)
