[ADD] Cone but light problème / [ADD] Limited Cylinder implémentation

--- a/Primitives/CMakeLists.txt
+++ b/Primitives/CMakeLists.txt
@@ -3,3 +3,6 @@
 add_subdirectory(Sphere)
 add_subdirectory(Plane)
 add_subdirectory(Moebius)
+add_subdirectory(Cylinder)
+add_subdirectory(Cone)
+add_subdirectory(Limited_Cylinder)
