[ADD] tests for arguments and configuration files

--- a/.github/workflows/raytracer_workflow.yml
+++ b/.github/workflows/raytracer_workflow.yml
@@ -61,7 +61,9 @@ jobs:
           fi
         done
     - name: Run tests
-      run: ./compile.sh --tests
+      run: |
+        rm -rf build
+        ./compile.sh --tests
 
   push_to_mirror:
     if: ${{ github.event_name == 'push' }}
