[ADD] tests for factories

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,8 @@ set(
     src/main.cpp
     src/Core/config/testsArgsConfig.cpp
     src/Core/config/testsConfigFile.cpp
+    src/Core/factory/testsLightFactory.cpp
+    src/Core/factory/testsPrimitiveFactory.cpp
 )
 
 # binary
