--- a/.github/workflows/raytracer_workflow.yml
+++ b/.github/workflows/raytracer_workflow.yml
@@ -1,15 +1,16 @@
 name: CI Raytracer
+
 on:
-  push:
+  pull_request:
     branches-ignore:
       - feature/ignore
-  pull_request:
+  push:
     branches-ignore:
       - feature/ignore
 
 env:
-  MIRROR_URL: "git@github.com:EpitechPromo2026/B-OOP-400-BDX-4-1-raytracer-luka.camus.git"
   EXECUTABLE: "raytracer"
+  MIRROR_URL: "git@github.com:EpitechPromo2026/B-OOP-400-BDX-4-1-raytracer-luka.camus.git"
 
 jobs:
   check_repository_cleanliness:
@@ -30,11 +31,9 @@ jobs:
           exit 1
         fi
 
-  run_program:
-    runs-on: ubuntu-latest
+  job_run_program:
     needs: check_repository_cleanliness
-    # container:
-      # image: epitechcontent/epitest-docker:latest
+    runs-on: ubuntu-latest
     steps:
     - name : Install packages
       run: |
@@ -60,6 +59,23 @@ jobs:
             exit 1
           fi
         done
+
+  job_run_tests:
+    name: Run tests, but is not obligated to succeed to push
+    needs: job_run_program
+    runs-on: ubuntu-latest
+    steps:
+    - name : Install packages
+      run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y ninja-build clang-tidy-12 ccache
+          sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-12 100
+          sudo apt-get install -y --no-install-recommends nlohmann-json3-dev libsfml-dev catch2
+          clang++ --version
+          clang-tidy --version
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Run tests
       run: |
         rm -rf build
@@ -68,14 +84,14 @@ jobs:
 
   push_to_mirror:
     if: ${{ github.event_name == 'push' }}
+    needs: job_run_program
     runs-on: ubuntu-latest
-    needs: run_program
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: ${{ env.MIRROR_URL }}
           ssh_private_key:
             ${{ secrets.SSH_PRIVATE_KEY }}
+          target_repo_url: ${{ env.MIRROR_URL }}
