--- a/.github/workflows/raytracer_workflow.yml
+++ b/.github/workflows/raytracer_workflow.yml
@@ -60,27 +60,28 @@ jobs:
           fi
         done
 
-  job_run_tests:
-    name: Run tests, but is not obligated to succeed to push
-    needs: job_run_program
-    runs-on: ubuntu-latest
-    steps:
-    - name : Install packages
-      run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y ninja-build clang-tidy-12 ccache
-          sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-12 100
-          sudo apt-get install -y --no-install-recommends nlohmann-json3-dev libsfml-dev catch2
-          clang++ --version
-          clang-tidy --version
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - name: Run tests
-      run: |
-        rm -rf build
-        ./compile.sh --tests
-      timeout-minutes: 10
+#  job_run_tests:
+#    if: ${{ github.ref == 'refs/heads/feature/misc' }}
+#    name: Run tests, but is not obligated to succeed to push
+#    needs: job_run_program
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name : Install packages
+#      run: |
+#          sudo apt-get update -qq
+#          sudo apt-get install -y ninja-build clang-tidy-12 ccache
+#          sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-12 100
+#          sudo apt-get install -y --no-install-recommends nlohmann-json3-dev libsfml-dev catch2
+#          clang++ --version
+#          clang-tidy --version
+#    - uses: actions/checkout@v3
+#      with:
+#        fetch-depth: 0
+#    - name: Run tests
+#      run: |
+#        rm -rf build
+#        ./compile.sh --tests
+#      timeout-minutes: 10
 
   push_to_mirror:
     if: ${{ github.event_name == 'push' }}
